tests/ui/item-is-not-a-module.rs
use testhooks::testhooks;

#[testhooks]
struct S;

fn main() {}
